# VISA_v_1_1

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
apps/telegram-bot/: .env.example  README.md  pyproject.toml
apps/telegram-bot/bot/: __init__.py  config.py  database.py  main.py
apps/telegram-bot/bot/api/: auth.py  main.py  schemas.py
apps/telegram-bot/data/: seed_consulates.ru.json  seed_countries.ru.json  seed_prices.ru.json
apps/telegram-bot/scripts/: pilot_smoke_check.py
apps/telegram-bot/tests/: conftest.py  test_access_keys.py  test_admin_access.py  test_admin_case_search.py  test_admin_case_status_transitions.py  test_admin_guard.py  test_agency_document_upload.py  test_applicant_flow_safety.py  test_applicant_profiles.py  test_cabinet_summary.py  test_case_creation.py  test_case_slot_status.py  test_case_submission.py  test_case_timeline.py  test_config_loader.py  test_config_loading.py  test_consulate_config_api.py  test_database_orders.py  test_document_templates.py  test_documents_api.py  test_documents_repository.py  test_documents_security.py  test_manager_case_actions.py  test_manager_case_view.py  test_manager_queue_limits.py  test_miniapp_auth.py  test_order_creation.py  test_order_repository.py  test_order_submission_flow.py  test_payment_provider.py  test_payment_statuses.py  test_pilot_end_to_end_flow.py  test_pilot_readiness_checks.py  test_pilot_release_readiness.py  test_pilot_security_redaction.py  test_pricing.py  test_promo_validation.py  test_sensitive_fields.py  test_slot_offer_api.py  test_slot_offer_parsing.py  (+5 more)
(+154 files in other folders)
