[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visa-telegram-bot"
version = "0.1.0"
description = "Telegram bot foundation for Schengen appointment request workflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.13,<4",
  "pydantic-settings>=2.4,<3",
  "python-dotenv>=1.0,<2",
  "aiosqlite>=0.20,<1",
  "pytest>=8.3,<9"
]

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
